--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build"
-  }
-  ,
+    "dev": "vite",
+    "build": "vite build",
+    "start": "nodemon -w src -e js,jsx,ts,tsx,json,css --exec 'npm run dev'"
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -25,9 +25,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
+    "nodemon": "^3.0.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
-  },
-  "homepage": "https://sameer-shreyas.github.io/portfolio-website"
+  }
 }
